[gd_scene load_steps=48 format=3 uid="uid://duuyynepqg4x2"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_cdtsu"]
[ext_resource type="Texture2D" uid="uid://bxbxv45lap4o" path="res://Sprites/player sprite sheets/Smear 01 Vertical 01.png" id="3_cuwdv"]
[ext_resource type="Script" path="res://Scripts/attackRotation.gd" id="3_esf8s"]
[ext_resource type="Texture2D" uid="uid://swc4t8u2jlia" path="res://Sprites/player sprite sheets/naked_wizard_02.png" id="5_qw86e"]

[sub_resource type="Animation" id="Animation_5cogu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NakedWizard02:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_4c54g"]
resource_name = "idle_bl"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NakedWizard02:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_r6k6v"]
resource_name = "idle_br"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NakedWizard02:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_15pkh"]
resource_name = "idle_down"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NakedWizard02:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_tuumv"]
resource_name = "idle_left"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NakedWizard02:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_rqu4k"]
resource_name = "idle_right"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NakedWizard02:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}

[sub_resource type="Animation" id="Animation_x15in"]
resource_name = "idle_tl"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NakedWizard02:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_hx5en"]
resource_name = "idle_tr"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NakedWizard02:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_n16xm"]
resource_name = "idle_up"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NakedWizard02:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}

[sub_resource type="Animation" id="Animation_ufxby"]
resource_name = "move_bl"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NakedWizard02:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}

[sub_resource type="Animation" id="Animation_2mm4e"]
resource_name = "move_br"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NakedWizard02:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_n516u"]
resource_name = "move_down"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NakedWizard02:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}

[sub_resource type="Animation" id="Animation_ta7fb"]
resource_name = "move_left"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NakedWizard02:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [6, 7]
}

[sub_resource type="Animation" id="Animation_avnbh"]
resource_name = "move_right"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NakedWizard02:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [14, 15]
}

[sub_resource type="Animation" id="Animation_5x2i8"]
resource_name = "move_tl"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NakedWizard02:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 9]
}

[sub_resource type="Animation" id="Animation_lp7dm"]
resource_name = "move_tr"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NakedWizard02:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [12, 13]
}

[sub_resource type="Animation" id="Animation_sfeti"]
resource_name = "move_up"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NakedWizard02:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_101kq"]
_data = {
"RESET": SubResource("Animation_5cogu"),
"idle_bl": SubResource("Animation_4c54g"),
"idle_br": SubResource("Animation_r6k6v"),
"idle_down": SubResource("Animation_15pkh"),
"idle_left": SubResource("Animation_tuumv"),
"idle_right": SubResource("Animation_rqu4k"),
"idle_tl": SubResource("Animation_x15in"),
"idle_tr": SubResource("Animation_hx5en"),
"idle_up": SubResource("Animation_n16xm"),
"move_bl": SubResource("Animation_ufxby"),
"move_br": SubResource("Animation_2mm4e"),
"move_down": SubResource("Animation_n516u"),
"move_left": SubResource("Animation_ta7fb"),
"move_right": SubResource("Animation_avnbh"),
"move_tl": SubResource("Animation_5x2i8"),
"move_tr": SubResource("Animation_lp7dm"),
"move_up": SubResource("Animation_sfeti")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_efl5p"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_swpxj"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bdjmb"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2hl7g"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_16hgp"]
animation = &"idle_bl"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mtgj3"]
animation = &"idle_tl"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_r44cd"]
animation = &"idle_tr"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ikx35"]
animation = &"idle_br"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_6jmyv"]
auto_triangles = false
blend_point_0/node = SubResource("AnimationNodeAnimation_efl5p")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_swpxj")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_bdjmb")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_2hl7g")
blend_point_3/pos = Vector2(1, 0)
blend_point_4/node = SubResource("AnimationNodeAnimation_16hgp")
blend_point_4/pos = Vector2(-0.7, 0.7)
blend_point_5/node = SubResource("AnimationNodeAnimation_mtgj3")
blend_point_5/pos = Vector2(-0.7, -0.7)
blend_point_6/node = SubResource("AnimationNodeAnimation_r44cd")
blend_point_6/pos = Vector2(0.7, -0.7)
blend_point_7/node = SubResource("AnimationNodeAnimation_ikx35")
blend_point_7/pos = Vector2(0.7, 0.7)
triangles = PackedInt32Array(0, 1, 2, 0, 1, 3, 0, 2, 4, 1, 2, 5, 1, 3, 6, 0, 3, 7)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_uh4uq"]
animation = &"move_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4muq6"]
animation = &"move_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rte07"]
animation = &"move_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_i0xl8"]
animation = &"move_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k848h"]
animation = &"move_bl"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cyyxw"]
animation = &"move_tl"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cnelp"]
animation = &"move_tr"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_i3ogb"]
animation = &"move_br"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_hcke1"]
auto_triangles = false
blend_point_0/node = SubResource("AnimationNodeAnimation_uh4uq")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_4muq6")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_rte07")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_i0xl8")
blend_point_3/pos = Vector2(0, -1)
blend_point_4/node = SubResource("AnimationNodeAnimation_k848h")
blend_point_4/pos = Vector2(-0.7, 0.7)
blend_point_5/node = SubResource("AnimationNodeAnimation_cyyxw")
blend_point_5/pos = Vector2(-0.7, -0.7)
blend_point_6/node = SubResource("AnimationNodeAnimation_cnelp")
blend_point_6/pos = Vector2(0.7, -0.7)
blend_point_7/node = SubResource("AnimationNodeAnimation_i3ogb")
blend_point_7/pos = Vector2(0.7, 0.7)
triangles = PackedInt32Array(0, 4, 5, 3, 5, 6, 1, 4, 7, 2, 6, 7, 4, 5, 7, 5, 6, 7)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_b2ywy"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1fmrg"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_eiten"]
states/End/position = Vector2(756, 70)
states/IdleBlend/node = SubResource("AnimationNodeBlendSpace2D_6jmyv")
states/IdleBlend/position = Vector2(311, 70)
states/MoveBlend/node = SubResource("AnimationNodeBlendSpace2D_hcke1")
states/MoveBlend/position = Vector2(511, 70)
states/Start/position = Vector2(127, 70)
transitions = ["IdleBlend", "MoveBlend", SubResource("AnimationNodeStateMachineTransition_b2ywy"), "MoveBlend", "IdleBlend", SubResource("AnimationNodeStateMachineTransition_1fmrg")]

[sub_resource type="Animation" id="Animation_hj3a2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("attackContainer/Smear01Vertical01:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_wm3dy"]
resource_name = "melee_attack"
length = 0.26
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("attackContainer/Smear01Vertical01:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4uim7"]
_data = {
"RESET": SubResource("Animation_hj3a2"),
"melee_attack": SubResource("Animation_wm3dy")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hslqc"]
radius = 3.0
height = 20.0

[node name="Player" type="CharacterBody2D"]
y_sort_enabled = true
script = ExtResource("1_cdtsu")
metadata/_edit_group_ = true

[node name="PlayerSpriteAnimPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_101kq")
}

[node name="PlayerSpriteAnimTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_eiten")
anim_player = NodePath("../PlayerSpriteAnimPlayer")
active = true
parameters/IdleBlend/blend_position = Vector2(-0.5568, 0.423581)
parameters/MoveBlend/blend_position = Vector2(0, 0)

[node name="AttackSpritePlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4uim7")
}

[node name="attackContainer" type="CharacterBody2D" parent="."]
position = Vector2(0, -4)
script = ExtResource("3_esf8s")

[node name="Smear01Vertical01" type="Sprite2D" parent="attackContainer"]
position = Vector2(5, 0)
texture = ExtResource("3_cuwdv")
hframes = 6
frame = 5

[node name="NakedWizard02" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(0, -9)
texture = ExtResource("5_qw86e")
hframes = 16
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.5708
shape = SubResource("CapsuleShape2D_hslqc")
